# hp-openfhe

./: .gitignore  README.md  generate_test_cases.py  requirements.txt  run_single_test.py  run_validation.py
app/: CMakeLists.txt  app.py  config.json  feature_names.json  fhe_inference.cpp  fhe_inference.hpp  fhe_inference.py  fhe_model_params.json  fhe_model_params.pth  main.cpp  model.cpp  model_fhe.pth  model_metrics.json  model_weights.json  result.json  scaler_params.json
app/include/: model.hpp
app/results/: result_1.json  result_10.json  result_2.json  result_3.json  result_4.json  result_5.json  result_6.json  result_7.json  result_8.json  result_9.json  validation_report.json
fherma-challenges-main/house-price-prediciton/: description.md
fherma-challenges-main/house-price-prediciton/app/: app.py
fherma-challenges-main/house-price-prediciton/tests/: test_case.json
test_cases/: summary.json  test_case_1.json  test_case_10.json  test_case_2.json  test_case_3.json  test_case_4.json  test_case_5.json  test_case_6.json  test_case_7.json  test_case_8.json  test_case_9.json
tests/: test_case.json
training/: analyze_data.py  download_data.py  fhe_model.py  train_improved.py  train_model.py
training/data/: california_housing.csv
